<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Islemler">

    <Button
        android:id="@+id/btnKrediHesap"
        android:layout_width="246dp"
        android:layout_height="47dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttonislemler"
        android:drawableStart="@drawable/bank_50px"
        android:text="@string/btTaksit"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnHesapMak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnHesapMak"
        android:layout_width="246dp"
        android:layout_height="47dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttonislemler"
        android:drawableStart="@drawable/calculator_50px"
        android:text="@string/btHesap"
        android:textAlignment="inherit"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnListView"
        android:layout_width="246dp"
        android:layout_height="47dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/buttonislemler"
        android:drawableStart="@drawable/list_50px"
        android:text="@string/btList"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="410dp"
        android:layout_height="3dp"
        android:layout_marginTop="128dp"
        android:background="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/divider2"
        android:layout_width="410dp"
        android:layout_height="3dp"
        android:layout_marginBottom="124dp"
        android:background="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:background="#ccddff"
        android:fontFamily="sans-serif-light"
        android:padding="20dp"
        android:text="@string/islemturu"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>